<resources>
    <string name="OK">OK</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accuracy">Accuracy</string>
    <string name="active_streak">Active Streak</string>
    <string name="activity_offline_description">Connect to the internet to see your activity</string>
    <string name="admob_ads_application_id">ca-app-pub-8314879823382687~5449706724</string>
    <string name="ads_keep_mimo_free">Ads help keep Mimo free</string>
    <string name="ai_browser_error_detected_action">Try to fix</string>
    <string name="ai_coding_tutor">AI coding tutor</string>
    <string name="ai_initial_prompt_description">You will see your app preview here once it is ready.</string>
    <string name="ai_initial_prompt_message">Magic at work…</string>
    <string name="ai_initial_setup_message">Getting things ready…</string>
    <string name="ai_intro_no_chat_history">I couldn’t fetch the previous messages right now, but your app is ready. What would you like to do next?</string>
    <string name="ai_mascot_name">Mimo</string>
    <string name="ai_progress_banner_done">Changes applied!</string>
    <string name="ai_progress_banner_restore">Version restored!</string>
    <string name="ai_progress_banner_working">Working on it...</string>
    <string name="ai_thinking">Thinking…</string>
    <string name="ai_tutor_chat_header">Mimo Tutor</string>
    <string name="ai_tutor_error_message_template">Can you explain the error %s?</string>
    <string name="ai_tutor_first_hint">Give me a hint</string>
    <string name="ai_tutor_input_max_characters">You’ve reached the limit of %d characters.</string>
    <string name="ai_tutor_input_placeholder">Ask me about coding...</string>
    <string name="ai_tutor_interactive_mistake_message_template">"I answered: %1$s

Can you help me understand what I got wrong?"</string>
    <string name="ai_tutor_intro_benefit_1">Get code explanations</string>
    <string name="ai_tutor_intro_benefit_2">Receive different code examples</string>
    <string name="ai_tutor_intro_benefit_3">Debug your code</string>
    <string name="ai_tutor_intro_benefit_4">Exclusive with Mimo Pro</string>
    <string name="ai_tutor_intro_cta_free">Claim free questions</string>
    <string name="ai_tutor_intro_cta_pro">Got it</string>
    <string name="ai_tutor_intro_disclaimer">Ask only coding-related questions. Never share personal data. We record and analyze conversations in order to improve Mimo.</string>
    <string name="ai_tutor_intro_freemium_description">This is a Mimo Pro feature. Enjoy a sneak peek with 5 free questions on the house!</string>
    <string name="ai_tutor_intro_title">Introducing Your Personal AI Tutor</string>
    <string name="ai_tutor_offline_description">"It seems there's a glitch in the matrix. Give it another go or check back later."</string>
    <string name="ai_tutor_second_hint">Give me another hint</string>
    <string name="ai_tutor_start_message">Hi there! How can I help?</string>
    <string name="ai_tutor_upgrade_button">Upgrade for more</string>
    <string name="ai_tutor_upgrade_message_count" formatted="false">%d/%d free questions.</string>
    <string name="ai_tutor_upgrade_title">"You've used all your free questions."</string>
    <string name="alert_msg_section_setion_locked">Unlock this section by finishing the previous one</string>
    <string name="all_plans">All plans</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anniversary_upsell_intro_comment">"Hi!

Mimo turns 10 this month.

For 10 years, learners around the world have used Mimo to start coding. And **now you’re part of that story**."</string>
    <string name="anniversary_upsell_intro_comment_with_name">"Hi, **%s**!

Mimo turns 10 this month.

For 10 years, learners around the world have used Mimo to start coding. And **now you’re part of that story**."</string>
    <string name="anniversary_upsell_learners_comment_1">Over the past decade, more than **35 million people have learned with Mimo**.</string>
    <string name="anniversary_upsell_learners_comment_2">Some started with their very first line of code. Others kept going until they **landed a job, launched a product, or built a venture of their own**.</string>
    <string name="anniversary_upsell_micro_moments_comment_1">Fun fact: “Mimo” stands for “micro moments.”</string>
    <string name="anniversary_upsell_micro_moments_comment_2">"That’s because Mimo was built around a simple idea: **even a few minutes a day can help you make real progress**.

Every lesson, streak, and comeback counts."</string>
    <string name="anniversary_upsell_offer_comment">To celebrate 10 years of Mimo, we’re giving you our **highest discount ever** on Mimo Pro.</string>
    <string name="anniversary_upsell_see_discount">See anniversary discount</string>
    <string name="anniversary_upsell_tell_me_more">Tell me more</string>
    <string name="annual">Annual</string>
    <string name="app_icon_batmimo_name">Batmimo</string>
    <string name="app_icon_chemist_name">Chemist</string>
    <string name="app_icon_default_name">Default</string>
    <string name="app_icon_ninja_name">Ninja</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_sso_noapp_body">Create your account in seconds with Facebook.</string>
    <string name="com_facebook_sso_noapp_not_now">Not now</string>
    <string name="com_facebook_sso_noapp_title">Sign up faster with Facebook</string>
    <string name="developer_menu_ab_test">Ab test</string>
    <string name="developer_menu_add_test_reward">Add test reward</string>
    <string name="developer_menu_anniversary_upsell_flow_example">Anniversary Upsell Flow</string>
    <string name="developer_menu_awesome_mode">Awesome Mode</string>
    <string name="developer_menu_campaign">Campaign</string>
    <string name="developer_menu_category_content">Content goodies</string>
    <string name="developer_menu_category_live_deployment_download">Download latest tracks package</string>
    <string name="developer_menu_category_live_deployment_use_unpublished">Use unpublished Tracks Package</string>
    <string name="developer_menu_category_mock_data">Mock data</string>
    <string name="developer_menu_category_previews">Previews</string>
    <string name="developer_menu_clear_image_cache">Clear image cache</string>
    <string name="developer_menu_content_experiment">Content experiment</string>
    <string name="developer_menu_crash_app">Force app to crash</string>
    <string name="developer_menu_disable_leak_canary">Disable LeakCanary</string>
    <string name="developer_menu_disable_pro">Disable pro</string>
    <string name="developer_menu_discount">Discounts</string>
    <string name="developer_menu_enable_preload_images">Enable preloading of images</string>
    <string name="developer_menu_eta_upsell_flow_example">ETA Upsell Flow</string>
    <string name="developer_menu_fake_leaderboards_result">Fake leaderboards result</string>
    <string name="developer_menu_fake_subscription">Fake subscription</string>
    <string name="developer_menu_force_chapter_end_progress_eta_enabled">Show Progress ETA screen on Chapter End</string>
    <string name="developer_menu_force_path_overview_eta_enabled">Enable ETA (after first chapter)</string>
    <string name="developer_menu_force_reactivation_prompt_on_app_launch">Force reactivation flow on app launch</string>
    <string name="developer_menu_god_mode">God mode</string>
    <string name="developer_menu_lessons_variation_track">Open lessons variations chapter</string>
    <string name="developer_menu_max_upsell_flow_example">Max Upsell Flow</string>
    <string name="developer_menu_override_remote_config">Override remote config</string>
    <string name="developer_menu_pro_upsell_flow_example">Pro Upsell Flow</string>
    <string name="developer_menu_refresh_firebase_remote">Refresh firebase remote config</string>
    <string name="developer_menu_reset_push_token">Reset push token</string>
    <string name="developer_menu_reset_reactivation_flow">Reset reactivation flow</string>
    <string name="developer_menu_reset_user_messages_counter">Reset user messages counter</string>
    <string name="developer_menu_send_lesson_progress_when_swiping">Auto send lesson progress</string>
    <string name="developer_menu_use_test_server">Use test server</string>
    <string name="navigation_leaderboard">Leaderboard</string>
    <string name="navigation_max">MAX</string>
    <string name="navigation_path">Learn</string>
    <string name="navigation_practice">Practice</string>
    <string name="navigation_profile">Profile</string>
    <string name="onboarding_set_occupation_high_school_student">High school student</string>
    <string name="onboarding_set_occupation_none">None of these</string>
    <string name="onboarding_set_occupation_professional">Employee</string>
    <string name="onboarding_set_occupation_self_employed">Self-employed</string>
    <string name="onboarding_set_occupation_title">Which of these describes you best?</string>
    <string name="onboarding_set_occupation_university_student">University student</string>
    <string name="search_tracks">Search tracks</string>
    <string name="shortcut_continue_learning_long_label">Continue learning</string>
    <string name="shortcut_continue_learning_short_label">Learn</string>
    <string name="shortcut_help_support_long_label">Need help? Get in touch</string>
    <string name="shortcut_help_support_short_label">Help &amp; FAQ</string>
    <string name="shortcut_practice_long_label">Practice is cool</string>
    <string name="shortcut_practice_short_label">Practice is cool</string>
</resources>