<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_tab_learn" android:id="@id/bottom_navigation_item_track" android:title="@string/navigation_path" />
    <item android:icon="@drawable/ic_tab_practice" android:id="@id/bottom_navigation_item_practice" android:title="@string/navigation_practice" />
    <item android:icon="@drawable/ic_tab_max" android:id="@id/bottom_navigation_item_max" android:title="@string/navigation_max" />
    <item android:icon="@drawable/ic_tab_leaderboard" android:id="@id/bottom_navigation_item_leaderboard" android:title="@string/navigation_leaderboard" />
    <item android:icon="@drawable/ic_tab_profile" android:id="@id/bottom_navigation_item_profile" android:title="@string/navigation_profile" />
</menu>
