<?xml version="1.0" encoding="utf-8"?>
<shortcuts
  xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut android:icon="@drawable/ic_tab_learn" android:enabled="true" android:shortcutId="continue_learning" android:shortcutShortLabel="@string/shortcut_continue_learning_short_label" android:shortcutLongLabel="@string/shortcut_continue_learning_long_label">
        <intent android:action="android.intent.action.VIEW" android:data="mimo://getmimo.com/deeplink/continuelearning" />
    </shortcut>
    <shortcut android:icon="@drawable/ic_tab_practice" android:enabled="true" android:shortcutId="practice" android:shortcutShortLabel="@string/shortcut_practice_short_label" android:shortcutLongLabel="@string/shortcut_practice_long_label">
        <intent android:action="android.intent.action.VIEW" android:data="mimo://getmimo.com/deeplink/practiceshortcut" />
    </shortcut>
    <shortcut android:icon="@drawable/ic_help" android:enabled="true" android:shortcutId="help_support" android:shortcutShortLabel="@string/shortcut_help_support_short_label" android:shortcutLongLabel="@string/shortcut_help_support_long_label">
        <intent android:action="android.intent.action.VIEW" android:data="mimo://getmimo.com/deeplink/support" />
    </shortcut>
</shortcuts>
