<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:id="@id/sv_developermenu" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/settings_fragment_max_container" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxWidth="@dimen/general_max_width">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="General" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" style="@style/TextP3" />
        <View android:background="@color/line_primary" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="12.0dip" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_ab_test" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_chapter_type_experiment" app:settings_label="@string/developer_menu_ab_test" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_content_experiment" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_chapter_type_experiment" app:settings_label="@string/developer_menu_content_experiment" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_firebase_remote_config_override" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_code" app:settings_label="@string/developer_menu_override_remote_config" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_remote_config_refresh" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_refresh_cw" app:settings_label="@string/developer_menu_refresh_firebase_remote" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_campaign" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_star" app:settings_label="@string/developer_menu_campaign" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_discount" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_chapter_type_experiment" app:settings_label="@string/developer_menu_discount" />
        <com.getmimo.ui.settings.SettingsListSwitchItem android:id="@id/item_developer_menu_disable_premium" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_star" app:settings_label="@string/developer_menu_disable_pro" />
        <com.getmimo.ui.settings.SettingsListSwitchItem android:id="@id/item_developer_menu_use_test_server" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_code" app:settings_label="@string/developer_menu_use_test_server" />
        <com.getmimo.ui.settings.SettingsListSwitchItem android:id="@id/item_developer_menu_preload_images" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_download" app:settings_label="@string/developer_menu_enable_preload_images" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_clear_image_cache" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_close_circle_filled" app:settings_label="@string/developer_menu_clear_image_cache" />
        <com.getmimo.ui.settings.SettingsListSwitchItem android:id="@id/item_developer_menu_god_mode" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_challenge" app:settings_label="@string/developer_menu_god_mode" />
        <com.getmimo.ui.settings.SettingsListSwitchItem android:id="@id/item_developer_menu_send_lesson_progress_when_swiping" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_cap" app:settings_label="@string/developer_menu_send_lesson_progress_when_swiping" />
        <com.getmimo.ui.settings.SettingsListSwitchItem android:id="@id/item_developer_menu_force_reactivation_prompt_on_app_launch" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_star" app:settings_label="@string/developer_menu_force_reactivation_prompt_on_app_launch" />
        <com.getmimo.ui.settings.SettingsListSwitchItem android:id="@id/item_developer_menu_force_path_overview_eta_enabled" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_ai_task_eye" app:settings_label="@string/developer_menu_force_path_overview_eta_enabled" />
        <com.getmimo.ui.settings.SettingsListSwitchItem android:id="@id/item_developer_menu_force_chapter_end_progress_eta_enabled" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_ai_task_eye" app:settings_label="@string/developer_menu_force_chapter_end_progress_eta_enabled" />
        <com.getmimo.ui.settings.SettingsListSwitchItem android:id="@id/item_developer_menu_disable_leak_canary" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/onboarding_fun" app:settings_label="@string/developer_menu_disable_leak_canary" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_reset_push_token" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_close_circle_filled" app:settings_label="@string/developer_menu_reset_push_token" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_reset_global_share_prefs" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_close_circle_filled" app:settings_label="Reset global shared prefs" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_reset_user_properties" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_close_circle_filled" app:settings_label="Reset User Properties" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_reset_dev_menu_options" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_close_circle_filled" app:settings_label="Reset dev menu" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_reset_user_messages_counter" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_close_circle_filled" app:settings_label="@string/developer_menu_reset_user_messages_counter" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_reset_reactivation_flow" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_close_circle_filled" app:settings_label="@string/developer_menu_reset_reactivation_flow" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_crash_app" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_bug" app:settings_label="@string/developer_menu_crash_app" />
        <TextView android:id="@id/category_previews" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/developer_menu_category_previews" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" style="@style/TextP3" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_preview_console" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_code" app:settings_label="Input Console" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_modal_dialog_test" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_chapter_type_experiment" app:settings_label="Modal Dialog Test" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_max_upsell_flow_example" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_chapter_type_experiment" app:settings_label="@string/developer_menu_max_upsell_flow_example" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_pro_upsell_flow_example" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_chapter_type_experiment" app:settings_label="@string/developer_menu_pro_upsell_flow_example" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_eta_upsell_flow_example" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_chapter_type_experiment" app:settings_label="@string/developer_menu_eta_upsell_flow_example" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_anniversary_upsell_flow_example" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_chapter_type_experiment" app:settings_label="@string/developer_menu_anniversary_upsell_flow_example" />
        <TextView android:id="@id/category_mock_data" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/developer_menu_category_mock_data" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" style="@style/TextP3" />
        <View android:background="@color/line_primary" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="12.0dip" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_add_test_reward" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_coins" app:settings_label="@string/developer_menu_add_test_reward" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_fake_leaderboards_result" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_tab_leaderboard" app:settings_label="@string/developer_menu_fake_leaderboards_result" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_fake_streak_data" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_streak_active" app:settings_label="Fake streak data" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_fake_subscription" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_tab_leaderboard" app:settings_label="@string/developer_menu_fake_subscription" />
        <TextView android:id="@id/category_live_publishing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/developer_menu_category_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" style="@style/TextP3" />
        <View android:id="@id/separator_settings_3" android:background="@color/line_primary" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="12.0dip" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_search_tracks" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_search" app:settings_label="@string/search_tracks" />
        <com.getmimo.ui.settings.SettingsListLivePreview android:id="@id/item_developer_menu_download" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_download" app:settings_label="@string/developer_menu_category_live_deployment_download" />
        <com.getmimo.ui.settings.SettingsListSwitchItem android:id="@id/item_developer_menu_use_unpublished" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_code" app:settings_label="@string/developer_menu_category_live_deployment_use_unpublished" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_menu_awesome_mode" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/onboarding_fun" app:settings_label="@string/developer_menu_awesome_mode" />
        <com.getmimo.ui.settings.SettingsListItem android:id="@id/item_developer_lessons_variations_chapter" android:layout_width="fill_parent" android:layout_height="wrap_content" app:settings_icon="@drawable/ic_cap" app:settings_label="@string/developer_menu_lessons_variation_track" />
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/tv_push_notification_token" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" style="@style/TextP3" />
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/tv_in_app_messaging_token" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" style="@style/TextP3" />
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/tv_authentication_method_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" style="@style/TextP3" />
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/tv_version_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" style="@style/TextP3" />
        <androidx.compose.ui.platform.ComposeView android:id="@id/cv_tutorial_dialog" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </LinearLayout>
</ScrollView>
