<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/com_facebook_sso_noapp_background" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:paddingTop="24.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="0.0dip" android:paddingEnd="16.0dip">
        <ImageButton android:id="@id/com_facebook_sso_noapp_close" android:background="?android:selectableItemBackgroundBorderless" android:padding="6.0dip" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/com_facebook_sso_close" android:scaleType="fitCenter" android:layout_centerVertical="true" android:contentDescription="@string/com_facebook_loginview_cancel_action" android:layout_alignParentStart="true" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/com_facebook_sso_logo" android:contentDescription="@string/com_facebook_loginview_log_in_button_long" />
            <TextView android:textSize="17.0sp" android:textColor="#ff0a1317" android:id="@id/com_facebook_sso_noapp_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/com_facebook_sso_noapp_title" android:fontFamily="@font/optimistic_vf" android:layout_marginStart="8.0dip" android:textFontWeight="600" />
        </LinearLayout>
    </RelativeLayout>
    <TextView android:textSize="15.0sp" android:textColor="#ff0a1317" android:id="@id/com_facebook_sso_noapp_body" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-8.0dip" android:text="@string/com_facebook_sso_noapp_body" android:fontFamily="@font/optimistic_vf" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
    <Button android:textSize="15.0sp" android:textColor="#fff1f4f7" android:gravity="center" android:id="@id/com_facebook_sso_noapp_continue" android:background="@drawable/com_facebook_sso_noapp_continue_button_bg" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/com_facebook_loginview_log_in_button_continue" android:textAllCaps="false" android:fontFamily="@font/optimistic_vf" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" android:stateListAnimator="@null" />
    <Button android:textSize="15.0sp" android:textColor="#ff0a1317" android:gravity="center" android:id="@id/com_facebook_sso_noapp_not_now" android:background="@drawable/com_facebook_sso_noapp_not_now_button_bg" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="12.0dip" android:text="@string/com_facebook_sso_noapp_not_now" android:textAllCaps="false" android:fontFamily="@font/optimistic_vf" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
</LinearLayout>
