<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center|top" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/onboarding_container_margin_bottom" android:maxWidth="@dimen/general_max_width" android:layout_marginHorizontal="@dimen/spacing_l"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="0.0dip" android:layout_height="0.0dip" android:fillViewport="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/text_primary" android:gravity="center" android:id="@id/tv_set_occupation_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_xl" android:text="@string/onboarding_set_occupation_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextH1" />
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/layout_motive" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_xxl" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_set_occupation_title">
                <com.getmimo.ui.onboarding.motive.OnboardingMotiveButton android:id="@id/btn_occupation_high_school" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginVertical="@dimen/spacing_xs" app:motive_image="@drawable/onboarding_occupation_high_school" app:motive_title="@string/onboarding_set_occupation_high_school_student" />
                <com.getmimo.ui.onboarding.motive.OnboardingMotiveButton android:id="@id/btn_occupation_university" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginVertical="@dimen/spacing_xs" app:motive_image="@drawable/onboarding_occupation_university" app:motive_title="@string/onboarding_set_occupation_university_student" />
                <com.getmimo.ui.onboarding.motive.OnboardingMotiveButton android:id="@id/btn_occupation_professional" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginVertical="@dimen/spacing_xs" app:motive_image="@drawable/onboarding_occupation_professional" app:motive_title="@string/onboarding_set_occupation_professional" />
                <com.getmimo.ui.onboarding.motive.OnboardingMotiveButton android:id="@id/btn_occupation_self_employed" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginVertical="@dimen/spacing_xs" app:motive_image="@drawable/onboarding_developer" app:motive_title="@string/onboarding_set_occupation_self_employed" />
                <com.getmimo.ui.onboarding.motive.OnboardingMotiveButton android:id="@id/btn_occupation_none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginVertical="@dimen/spacing_xs" app:motive_image="@drawable/onboarding_different_reason" app:motive_title="@string/onboarding_set_occupation_none" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
